Fix view on smaller screen

--- a/CSS/mainSheet.css
+++ b/CSS/mainSheet.css
@@ -13,9 +13,6 @@ body {
 
     min-height: 100vh;
     min-width: 100vh;
-
-    margin: 0;
-    padding: 2em;
 }
 
 
